--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "fri(ge)cle(aner)",
   "main": "./out/main/index.js",
-  "author": "방정훈",
+  "author": "Aeirst",
   "homepage": "https://github.com/aeirst/fricle",
   "scripts": {
     "format": "prettier --write .",
@@ -53,6 +53,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.17.3",
+    "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -65,6 +67,7 @@
     "react-day-picker": "^8.10.0",
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.13",
+    "react-router-dom": "^6.24.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
