--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -18,6 +18,7 @@ nsis:
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+  installerIcon: "resources/fricle.ico"
 mac:
   entitlementsInherit: build/entitlements.mac.plist
   extendInfo:
